client.yaml
---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: backend
#   labels:
#     istio-injection: enabled
---
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: default
spec:
  containers:
    - name: client
      image: curlimages/curl:latest
      command: ["/bin/sh", "-c", "--"]
      args: ["while true; do sleep 30; done;"]
