services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: first-app
  namespace: default
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: first-app
---
apiVersion: v1
kind: Service
metadata:
  name: argo-app
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: argo-app
